--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - Assets Management System</title>
-    <link rel="stylesheet" type="text/css" href="/static/content/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
-    <script src="/static/scripts/modernizr-2.6.2.js"></script>
+    <link rel="stylesheet" type="text/css" href="/home/vsonline/workspace/PX/static/content/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/home/vsonline/workspace/PX/static/content/site.css" />
+    <script src="/home/vsonline/workspace/PX/static/scripts/modernizr-2.6.2.js"></script>
 </head>
 
 <body>
@@ -38,9 +38,9 @@
         </footer>
     </div>
 
-    <script src="/static/scripts/jquery-1.10.2.js"></script>
-    <script src="/static/scripts/bootstrap.js"></script>
-    <script src="/static/scripts/respond.js"></script>
+    <script src="/home/vsonline/workspace/PX/static/scripts/jquery-1.10.2.js"></script>
+    <script src="/home/vsonline/workspace/PX/static/scripts/bootstrap.js"></script>
+    <script src="/home/vsonline/workspace/PX/static/scripts/respond.js"></script>
     {% block scripts %}{% endblock %}
 
 </body>
