--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,7 +18,7 @@
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="{{ url_for('home') }}">User View &raquo;</a></p>  
+        <p><a class="btn btn-default" href="{{ url_for('home') }}">User &raquo;</a></p>  
     </div>
     <div class="col-md-6">
         <h2>Get more libraries</h2>
