--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -18,12 +18,12 @@
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="{{ url_for('home') }}">User &raquo;</a></p>  
+        <p><a class="btn btn-default" href="{{ url_for('userview') }}">User &raquo;</a></p>  
     </div>
     <div class="col-md-6">
         <h2>Get more libraries</h2>
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="{{ url_for('~/img/') }}">Admin &raquo;</a></p>
+        <p><a class="btn btn-default" href="#">Admin &raquo;</a></p>
     </div>
     </div>
 </div>
