--- a/templates/userview.html
+++ b/templates/userview.html
@@ -9,14 +9,15 @@
 </div>
 
 <div class="form-group">
-  <label for="searchBox1">Example select</label>
-  <select class="form-control" id="searchBox1">
-    <option>  </option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
+  <label for="searchBox1">Asset Type : </label>
+  <select class="selectpicker" data-live-search="true" id="searchBox1">
+    <option>   </option>
+    <option data-tokens="Mobile">Mobile</option>
+    <option data-tokens="Laptop">Laptop</option>
+    <option data-tokens="Tablet">Tablet</option>
+    <option data-tokens="Site">Site</option>
   </select>
+  
 </div>
 
 <div class = "container" >
