--- a/templates/login.html
+++ b/templates/login.html
@@ -2,26 +2,22 @@
 
 {% block content %}
 
-<div class="dropdown-menu">
-    <form class="px-4 py-3">
-      <div class="form-group">
-        <label for="exampleDropdownFormEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-      </div>
-      <div class="form-group">
-        <label for="exampleDropdownFormPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="dropdownCheck">
-          <label class="form-check-label" for="dropdownCheck">
-            Remember me
-          </label>
+<body class="text-center">
+    <div class="container">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-10 col-md-8 col-lg-6">
+                <form class="form-signin">
+                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                    <label for="AdminID" class="sr-only">Email address</label>
+                    <input type="id" id="AdminID" class="form-control" placeholder="Admin ID" required=""
+                        autofocus="">
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                </form>
+            </div>
         </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
-    </form>
-    <div class="dropdown-divider"></div>
-</div>
-  {% endblock %}
+    </div>
+
+</body>
+{% endblock %}
