--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-lg-3 offset-md-2">
-      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"></svg><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
       <h2>General User</h2>
       <p><a class="btn btn-secondary" href="{{ url_for('userview')}}" role="button">User View »</a></p>
     </div>
