--- a/templates/userview.html
+++ b/templates/userview.html
@@ -13,8 +13,8 @@
   <select class="custom-select custom-select-lg mb-3" id="searchBox1" onchange="location = this.value;">
     <option selected> choose asset type </option>
     <option value ="{{ url_for('user_mobile')}}">Mobile</option>
-    <option >Laptop</option>
-    <option >Tablet</option>
+    <option value ="{{ url_for('user_laptop')}}">Laptop</option>
+    <option value ="{{ url_for('user_tablet')}}">Tablet</option>
     <option >Site</option>
   </select>
 </div>
